# mem-r1-reproduce

./: .gitignore  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
artifacts/contexts/: train.jsonl  val.jsonl
artifacts/contexts_rl/: val.jsonl
artifacts/episodes/: train.jsonl  val.jsonl
artifacts/memory_banks/: conv-26.json  conv-30.json  conv-41.json  conv-42.json  conv-43.json  conv-44.json  conv-47.json  conv-48.json  conv-49.json  conv-50.json
artifacts/memory_banks_rl/: conv-26.json  conv-30.json  conv-41.json  conv-42.json  conv-43.json  conv-44.json  conv-47.json  conv-48.json  conv-49.json  conv-50.json
artifacts/turn_inputs/: conv-26.jsonl  conv-30.jsonl  conv-41.jsonl  conv-42.jsonl  conv-43.jsonl  conv-44.jsonl  conv-47.jsonl  conv-48.jsonl  conv-49.jsonl  conv-50.jsonl
configs/: grpo-answer-qwen3b-f1.yaml  grpo-answer-qwen3b.yaml  grpo-manager-qwen3b-v2.yaml  grpo-manager-qwen3b.yaml
docs/: experiments.md  frozen-baseline.md  grpo-answer-agent.md  memory-manager-rl.md  paper-notes.md  reproduction-plan.md
scripts/: build_manager_episodes.py  build_memory_banks.py  build_train_contexts.py  build_turn_inputs.py  download_locomo.py  eval_manager_episodes.py  export_answer_adapter.py  manager_diagnostics.py  pod_guard.sh  rebuild_banks_with_manager.py  run_eval.py  train_grpo_answer_agent.py  train_grpo_memory_manager.py
tests/: conftest.py  test_answer_agent.py  test_bootstrap.py  test_evaluation.py  test_grpo.py  test_locomo.py  test_manager.py  test_memory_bank.py  test_metrics.py  test_providers.py  test_retrieval.py
(+28 files in other folders)
