[project]
name = "memory-r1"
version = "0.1.0"
description = "Reproduction of Memory-R1 (arXiv:2508.19828): RL-trained memory management for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_r1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
