[project]
name = "memory-r1"
version = "0.1.0"
description = "Reproduction of Memory-R1 (arXiv:2508.19828): RL-trained memory management for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.44.0",
]

[project.optional-dependencies]
# GPU box only (uv sync --extra train); the local no-GPU workspace never installs these
train = [
    "torch>=2.5",
    "transformers>=4.48",
    "trl>=0.14",
    "peft>=0.14",
    "datasets>=3.0",
    "accelerate>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_r1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
